Added baked potato soup

--- a/Main.tex
+++ b/Main.tex
@@ -39,6 +39,10 @@
 \section{Maple Granola Clusters (mgc)}
 \input{Breakfast Recipes/Maple Granola Bunches/Maple Granola Bunches}
 
+\newpage
+\section{Cinnamon Apple Overnight Oats}
+\input{Breakfast Recipes/Overnight Oats/Cinnamon Apple Overnight Oats.tex}
+
 \chapter{Chicken Recipes}
 \newpage
 \section{Curry Stir Fry (csf)}
@@ -58,7 +62,9 @@
 \section{Beef Stew (bs)}
 \input{Soups & Stews/Beef Stew/Beef Stew}
 \newpage 
-
+\section{Baked Potato Soup}
+\input{Soups & Stews/Baked Potato Soup/Baked Potato Soup.tex}
+\newpage 
 
 
 \section{Green Chile Chicken Stew (gccs)}
